--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style/meteor.css">
 </head>
 
-<body>
+<body class="text-light">
     <script>
         function meteor() {
             let amount = 300;
@@ -45,13 +45,13 @@
 <footer class="bg-info text-center text-lg-start fixed-bottom">
     <div class="container text-center p-4">
         <div class="row">
-            <div class="col-sm">
+            <div class="col">
                 <a href="https://github.com/Boahmu"><img src="style/icons8-github.svg" alt="GitHub" /></a>
             </div>
-            <div class="col-sm">
+            <div class="col">
                 <a href="https://discordapp.com/users/1072579137841152061"><img src="style/icons8-discord.svg" alt="Discord" /></a>
             </div>
-            <div class="col-sm">
+            <div class="col">
                 <a href="https://twitter.com/boahmu"><img src="style/icons8-twitter.svg" alt="Twitter" /></a>
             </div>
             <!-- 
@@ -63,7 +63,7 @@
         </div>
     </div>
     <div class="text-center text-light p-3" style="background-color: rgb(0, 0, 0);">
-        © 2020 Copyright Boahmu.xyz
+        © 2023 Copyright Boahmu.xyz
     </div>
 </footer>
 
