update linkedIn Link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </script>
     <div class="container position-relative zindex-5 text-center pt-5 mt-lg-4 mt-xl-5">
         <h1 class="display-1 pt-4 mt-sm-3">Boahmu</h1>
-        <p class="display-5 pt-4 mt-sm-3">Hello i'm Boahmu, a french computer enthusiast.</p>
+        <p class="display-5 pt-4 mt-sm-3">Hello i'm Anthony Dagon, a french computer enthusiast.</p>
     </div>
 </body>
 
@@ -53,13 +53,10 @@
             </div>
             <div class="col">
                 <a href="https://twitter.com/boahmu"><img src="style/icons8-twitter.svg" alt="Twitter" /></a>
-            </div>
-            <!-- 
-            For now I don't want to reveal my identity     
+            </div>   
             <div class="col-sm">
-                <a href="MaybeADay"><img src="style/icons8-linkedin.svg" alt="LinkedId" /></a>
+                <a href="https://www.linkedin.com/in/anthony-dagon-956952183"><img src="style/icons8-linkedin.svg" alt="LinkedIn" /></a>
             </div>
-            -->
         </div>
     </div>
     <div class="text-center text-light p-3" style="background-color: rgb(0, 0, 0);">
